--- a/index.html
+++ b/index.html
@@ -40,19 +40,20 @@
 	  
 	  <div id="itemCount" class="item-count"></div>
 	  
-      <button id="startButton" onclick="startPicking()">Start Picking</button>
-      <button onclick="clearList()" style="background-color:#ff3b30">Clear</button>
+      <button id="startButton" onclick="startPicking()" style="background-color:#44704f">Start Picking</button>
+      <button onclick="clearList()" style="background-color:#c9372e">Clear</button>
     </div>
 
     <!-- PICKING SECTION -->
     <div id="pickSection">
       <div id="result" class="result"></div>
-      <button id="pickButton" onclick="pickNext()" style="background-color:#34c759">Next</button>
-      <button onclick="restartApp()" style="background-color:#ff3b30">Restart</button>
+      <button id="pickButton" onclick="pickNext()" style="background-color:#0c9c30">Next</button>
+      <button onclick="restartApp()" style="background-color:#c9372e">Restart</button>
     </div>
 
   </div>
 
   <script src="script.js"></script>
+  
 </body>
 </html>
